arrow icon margin

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         align-items: center;
       }
 
+      .k-menu-expand-arrow .k-icon {
+        margin-right: 10px !important;
+      }
+
       #content-container {
         flex: 1;
         padding: 20px;
